fixed styles on mobile

--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -77,5 +77,6 @@
 
 .form_forgot-btn {
     border: 0;
+    background-color: transparent;
 }
 
